# toydb-web

./: Cargo.toml  README.md  index.html
src/: context.rs  lib.rs  main.rs  resource.rs
src/components/: app.rs  dataview.rs  mod.rs
